--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
             >
           </li>
           <li>
-            <a class="nav scrolltoview accountNav" id="accountNav" href="/books_lib/login.html" style="position: fixed; right: 80px; top: 15px;"
+            <a class="nav scrolltoview accountNav" id="accountNav" href="login.html" style="position: fixed; right: 80px; top: 15px;"
               ><span class="accountNav"></span>Login</a
             >
           </li>
           <li>
-            <a class="nav scrolltoview " href="/books_lib/cart.html" style="position: fixed; right: 0px; top: 15px;"
+            <a class="nav scrolltoview " href="cart.html" style="position: fixed; right: 0px; top: 15px;"
               ><span class="icon"></span>Cart</a>
           </li>
             
