--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="https://img.icons8.com/office/16/book.png" type="image/x-icon">
 
     <title>
-      Library-Management-DEVREV
+      Library-Management
     </title>
     <!-- Web Fonts -->
     <link
